--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,44 @@
-<h1> Emilee Hatch </h1>
+<section class="section section-1">
+    <h1> Welcome to CSE Motors! </h1>
+    <div class="img-description">
+        <div class="description_box">
+            <h2>DMC Delorean</h2>
+            <ul>
+                <li>3 Cup holders</li>
+                <li>Superman doors</li>
+                <li>Fuzzy dice!</li>
+            </ul>
+            <button class="own-today-btn">Own Today</button>
+        </div>
+        <div class="delorean-img"><img src="/images/vehicles/delorean.jpg" alt=""></div>
+    </div>
+</section>
+
+<section class="section section-2">
+    <h1> DMC Delorean Reviews </h1>
+    <ul>
+        <li>"So fast it's almost like traveling in time." (4/5)</li>
+        <li>"Coolest ride on the road." (4/5)</li>
+        <li>"I'm feeling McFly!" (5/5)</li>
+        <li>"The most futuristic ride of our day." (4.5/5)</li>
+        <li>"80s livin and I love it!" (5/5)</li>
+    </ul>
+</section>
+
+<section class="section section-3">
+    <h1> Delorean Upgrades </h1>
+    <ul>
+        <li>
+            <div><img src="/images/upgrades/flux-cap.png" alt=""> <a href="/">Flux Capacitor</a></div>
+        </li>
+        <li>
+            <div><img src="/images/upgrades/flame.jpg" alt=""> <a href="/">Flame Decals</a></div>
+        </li>
+        <li>
+            <div><img src="/images/upgrades/bumper_sticker.jpg" alt=""> <a href="/">Bumper Stickers</a></div>
+        </li>
+        <li>
+            <div><img src="/images/upgrades/hub-cap.jpg" alt=""> <a href="/">Hub Caps</a></div>
+        </li>
+    </ul>
+</section>
