week 1 - assignment update to css, index, header, nav

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,22 @@
-<section class="section section-1">
-    <h1> Welcome to CSE Motors! </h1>
-    <div class="img-description">
-        <div class="description_box">
-            <h2>DMC Delorean</h2>
-            <ul>
+<section class="section-container section-container__welcome">
+    <h1 class="header header__welcome"> Welcome to CSE Motors! </h1>
+    <div class="container container__img-description">
+        <div class="container container__description_box">
+            <h2 class="header header__dmc-delorean">DMC Delorean</h2>
+            <ul class="list-ul list-ul__dmc-delorean">
                 <li>3 Cup holders</li>
                 <li>Superman doors</li>
                 <li>Fuzzy dice!</li>
             </ul>
-            <button class="own-today-btn">Own Today</button>
+            <button class="button button__own-today">Own Today</button>
         </div>
-        <div class="delorean-img"><img src="/images/vehicles/delorean.jpg" alt=""></div>
+        <div class="image-container image-container__delorean"><img src="/images/vehicles/delorean.jpg" alt=""></div>
     </div>
 </section>
 
-<section class="section section-2">
-    <h1> DMC Delorean Reviews </h1>
-    <ul>
+<section class="section-container section-container__reviews">
+    <h1 class="header header__dmc-delorean-reviews"> DMC Delorean Reviews </h1>
+    <ul class="list-ul list-ul__reviews">
         <li>"So fast it's almost like traveling in time." (4/5)</li>
         <li>"Coolest ride on the road." (4/5)</li>
         <li>"I'm feeling McFly!" (5/5)</li>
@@ -25,20 +25,20 @@
     </ul>
 </section>
 
-<section class="section section-3">
-    <h1> Delorean Upgrades </h1>
-    <ul>
+<section class="section-container section-container__upgrades">
+    <h1 class="header header__delorean-upgrades"> Delorean Upgrades </h1>
+    <ul class="list-ul list-ul__upgrades">
         <li>
-            <div><img src="/images/upgrades/flux-cap.png" alt=""> <a href="/">Flux Capacitor</a></div>
+            <div class="image-container image-container__flux-cap"><img src="/images/upgrades/flux-cap.png" alt=""> <a href="/" class="tools tools__flux-capacitor">Flux Capacitor</a></div>
         </li>
         <li>
-            <div><img src="/images/upgrades/flame.jpg" alt=""> <a href="/">Flame Decals</a></div>
+            <div class="image-container image-container__flame"><img src="/images/upgrades/flame.jpg" alt=""> <a href="/" class="tools tools__flame">Flame Decals</a></div>
         </li>
         <li>
-            <div><img src="/images/upgrades/bumper_sticker.jpg" alt=""> <a href="/">Bumper Stickers</a></div>
+            <div class="image-container image-container__bumper-sticker"><img src="/images/upgrades/bumper_sticker.jpg" alt=""> <a href="/" class="tools tools__bumper-sticker">Bumper Stickers</a></div>
         </li>
         <li>
-            <div><img src="/images/upgrades/hub-cap.jpg" alt=""> <a href="/">Hub Caps</a></div>
+            <div class="image-container image-container__hub-cap"><img src="/images/upgrades/hub-cap.jpg" alt=""> <a href="/" class="tools tools__hub-cap">Hub Caps</a></div>
         </li>
     </ul>
 </section>
