--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
 <nav>
-    <ul>
-        <li>Home</li>
-        <li>Custom</li>
-        <li>Sedan</li>
-        <li>SUV</li>
-        <li>Truck</li>
+    <ul class="list-ul list-ul__navigation">
+        <li><a href="#" class="li-element li-element__home">Home</a></li>
+        <li><a href="#" class="li-element li-element__custom">Custom</a></li>
+        <li><a href="#" class="li-element li-element__sedan">Sedan</a></li>
+        <li><a href="#" class="li-element li-element__suv">SUV</a></li>
+        <li><a href="#" class="li-element li-element__truck">Truck</a></li>
     </ul>
 </nav>
