--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,11 @@
 /******* Root and Fonts ***************/
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Montserrat:wght@100;300;400;500&family=Oswald:wght@200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 :root {
-  --drk-gray: #313131;
+  --drk-gray: #272727;
   --white: #ffffff;
+  --blue: #33a6c8;
+  --blue-hover: #2a89a5;
 }
 
 
@@ -18,8 +20,50 @@
 
 
 /******* ALL ***************/
-#top-header, nav {
-  font-family: 'Montserrat', sans-serif;
+.header {
+  font-family: 'Catamaran', sans-serif;
+  color: var(--drk-gray);
+  margin-bottom: 10px;
+  font-weight: 800;
+}
+
+.list-ul {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.list-ul__dmc-delorean,
+.list-ul__upgrades,
+.list-ul__navigation {
+  list-style-type: none;
+}
+
+.section-container {
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.tools:hover {
+  color: var(--blue);
+}
+
+.button {
+  height: auto;
+  width: auto;
+  padding: 8px;
+  text-align: center;
+  font-family: 'Catamaran', sans-serif;
+  background-color: var(--blue);
+  border: 2px solid var(--blue);
+  border-radius: 8px;
+  color: var(--drk-gray);
+  font-weight: 700;
+}
+
+.button:hover {
+  cursor: pointer;
+  color: var(--white);
+  background-color: var(--blue-hover);
+  border: 2px solid var(--blue-hover);
 }
 
 body {
@@ -27,68 +71,89 @@ body {
   margin-right: 2%;
 }
 
-
 img {
   height: auto;
   max-width: 100%;
 }
 
 /******* Header ***************/
-/*
-  Colors
-  text - gray #3a3a3a
-*/
 #top-header {
   display: flex;
-  height: 10vh;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 12vh;
   margin-top: 2%;
 }
 
-.siteName {
-  flex: 1 1;
-  font-size: 30px;
-  font-weight: 800;
+.header__siteName {
+  font-size: 28px;
 }
 
-.siteName a,
-#tools a {
+.tools__my-account {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+}
+
+.header__siteName,
+.tools {
   text-decoration: none;
   color: var(--drk-gray);
 }
 
-#tools {
-  font-size: 18px;
-  font-weight: 500;
-}
-
 
 /******* Navigation ***************/
-/*
-  Colors
-  Background - gray #3a3a3a
-  text - white #ffffff
-*/
 nav {
   background-color: var(--drk-gray);
-  color: var(--white);
 }
 
-ul {
-  list-style-type: none;
+.list-ul__navigation {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  padding: 15px;
 }
 
-li {
-  padding: 8px 4px 8px 0;
+.li-element {
+  color: var(--white);
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 800;
+}
+
+/******* Main ***************/
+.header__welcome {
+  font-size: 20px;
+}
+
+.header__dmc-delorean,
+.header__dmc-delorean-reviews,
+.header__delorean-upgrades {
   font-size: 18px;
 }
 
-
-/******* Main ***************/
-.img-description {
+.container__img-description {
   position: relative;
 }
+
+.container__description_box {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: var(--blue);
+  width: 50%;
+  padding: 1%;
+  margin-top: 2%;
+}
+
+.header__dmc-delorean {
+  color: var(--blue);
+}
+
+.list-ul__dmc-delorean {
+  font-weight: 700;
+}
+
+/*
+
 .description_box {
   position: absolute;
   background-color: rgba(218, 218, 218, 0.425);
@@ -117,13 +182,8 @@ li {
   padding-top: 20px;
 }
 
-.own-today-btn {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 14px 14px;
-  border-radius: 6px;
-  border: 2px solid rgb(0, 162, 232);
-  background-color: rgb(0, 162, 232);
-  color: #ffffff;
-}
+*/
 /******* Footer ***************/
+.copyright {
+  font-family: 'Open Sans', sans-serif;
+}
