--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <header id="top-header">
-    <span class="siteName">
-        <a href="/" title="Return to home page">CSE Motors</a>
+    <span class="span-header">
+        <a href="/" title="Return to home page" class="header header__siteName">CSE Motors</a>
     </span>
     <div id="tools">
-        <a title="Click to log in" href="/account/login">My Account</a>
+        <a title="Click to log in" href="/account/login" class="tools tools__my-account">My Account</a>
     </div>
 </header>
