week 1 - update to cse motors layouts (mobile & desktop)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,44 +1,72 @@
-<section class="section-container section-container__welcome">
-    <h1 class="header header__welcome"> Welcome to CSE Motors! </h1>
-    <div class="container container__img-description">
-        <div class="container container__description_box">
-            <h2 class="header header__dmc-delorean">DMC Delorean</h2>
-            <ul class="list-ul list-ul__dmc-delorean">
-                <li>3 Cup holders</li>
-                <li>Superman doors</li>
-                <li>Fuzzy dice!</li>
-            </ul>
-            <button class="button button__own-today">Own Today</button>
+<div class="section__container">
+    <section class="section__welcome--container">
+        <h1 class="section__welcome--title"> Welcome to CSE Motors! </h1>
+        <div class="section__welcome--img-highlights-container">
+            <div class="section__welcome--highlights-container">
+                <h2 class="section__welcome--subtitle">DMC Delorean</h2>
+                <ul class="section__welcome--list-highlights">
+                    <li>3 Cup holders</li>
+                    <li>Superman doors</li>
+                    <li>Fuzzy dice!</li>
+                </ul>
+                <button class="button section__welcome--button-own-today">Own Today</button>
+            </div>
+
+            <div class="section__welcome--img-container">
+                <img src="/images/vehicles/delorean.jpg" alt="A gray and white futuristic car.">
+            </div>
         </div>
-        <div class="image-container image-container__delorean"><img src="/images/vehicles/delorean.jpg" alt=""></div>
-    </div>
-</section>
+    </section>
 
-<section class="section-container section-container__reviews">
-    <h1 class="header header__dmc-delorean-reviews"> DMC Delorean Reviews </h1>
-    <ul class="list-ul list-ul__reviews">
-        <li>"So fast it's almost like traveling in time." (4/5)</li>
-        <li>"Coolest ride on the road." (4/5)</li>
-        <li>"I'm feeling McFly!" (5/5)</li>
-        <li>"The most futuristic ride of our day." (4.5/5)</li>
-        <li>"80s livin and I love it!" (5/5)</li>
-    </ul>
-</section>
+    <section class="section__reviews--container">
+        <h1 class="section__reviews--title"> DMC Delorean Reviews </h1>
+        <ul class="section__reviews--list-reviews">
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80s livin and I love it!" (5/5)</li>
+        </ul>
+    </section>
 
-<section class="section-container section-container__upgrades">
-    <h1 class="header header__delorean-upgrades"> Delorean Upgrades </h1>
-    <ul class="list-ul list-ul__upgrades">
-        <li>
-            <div class="image-container image-container__flux-cap"><img src="/images/upgrades/flux-cap.png" alt=""> <a href="/" class="tools tools__flux-capacitor">Flux Capacitor</a></div>
-        </li>
-        <li>
-            <div class="image-container image-container__flame"><img src="/images/upgrades/flame.jpg" alt=""> <a href="/" class="tools tools__flame">Flame Decals</a></div>
-        </li>
-        <li>
-            <div class="image-container image-container__bumper-sticker"><img src="/images/upgrades/bumper_sticker.jpg" alt=""> <a href="/" class="tools tools__bumper-sticker">Bumper Stickers</a></div>
-        </li>
-        <li>
-            <div class="image-container image-container__hub-cap"><img src="/images/upgrades/hub-cap.jpg" alt=""> <a href="/" class="tools tools__hub-cap">Hub Caps</a></div>
-        </li>
-    </ul>
-</section>
+    <section class="section__upgrades--container">
+        <h1 class="section__upgrades--title"> Delorean Upgrades </h1>
+        <ul class="section__upgrades--list-upgrades">
+            <li>
+                <div class="section__upgrades--img-link-container section__upgrades--flux-cap">
+                    <div class="section__upgrades--img-container">
+                        <img src="/images/upgrades/flux-cap.png" alt="A gray square with red and blue shapes inside it.">
+                    </div>
+                    <a href="/" class="section__upgrades--link section__upgrades--link-flux-cap">Flux Capacitor</a>
+                </div>
+            </li>
+
+            <li>
+                <div class="section__upgrades--img-link-container section__upgrades--flame">
+                    <div class="section__upgrades--img-container">
+                        <img src="/images/upgrades/flame.jpg" alt="A large red and yellow flame with a white background.">
+                    </div>
+                    <a href="/" class="section__upgrades--link section__upgrades--link-flame-dec">Flame Decals</a>
+                </div>
+            </li>
+
+            <li>
+                <div class="section__upgrades--img-link-container section__upgrades--bumper">
+                    <div class="section__upgrades--img-container">
+                        <img src="/images/upgrades/bumper_sticker.jpg" alt="A gray square bumper sticker with the words 'Hello World' written on it.">
+                    </div>
+                    <a href="/" class="section__upgrades--link section__upgrades--link-bumper-stick">Bumper Stickers</a>
+                </div>
+            </li>
+
+            <li>
+                <div class="section__upgrades--img-link-container section__upgrades--hub-cap">
+                    <div class="section__upgrades--img-container">
+                        <img src="/images/upgrades/hub-cap.jpg" alt="A silver hub cap with triangles and bumps in the middle with a white background.">
+                    </div>
+                    <a href="/" class="section__upgrades--link section__upgrades--link-hub-caps">Hub Caps</a>
+                </div>
+            </li>
+        </ul>
+    </section>
+</div>
