--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
-<header id="top-header">
-    <span class="span-header">
-        <a href="/" title="Return to home page" class="header header__siteName">CSE Motors</a>
+<header id="header--container">
+    <span class="header__title--container">
+        <a href="/" title="Return to home page" class="header__title--site-name">CSE Motors</a>
     </span>
-    <div id="tools">
-        <a title="Click to log in" href="/account/login" class="tools tools__my-account">My Account</a>
+    <div id="header__login--container">
+        <a title="Click to log in" href="/account/login" class="header__login--link">My Account</a>
     </div>
 </header>
