--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
 <nav>
-    <ul class="list-ul list-ul__navigation">
-        <li><a href="#" class="li-element li-element__home">Home</a></li>
-        <li><a href="#" class="li-element li-element__custom">Custom</a></li>
-        <li><a href="#" class="li-element li-element__sedan">Sedan</a></li>
-        <li><a href="#" class="li-element li-element__suv">SUV</a></li>
-        <li><a href="#" class="li-element li-element__truck">Truck</a></li>
+    <ul class="navigation__list">
+        <li><a href="#" class="navigation__list--item navigation__list--item-home">Home</a></li>
+        <li><a href="#" class="navigation__list--item navigation__list--item-custom">Custom</a></li>
+        <li><a href="#" class="navigation__list--item navigation__list--item-sedan">Sedan</a></li>
+        <li><a href="#" class="navigation__list--item navigation__list--item-suv">SUV</a></li>
+        <li><a href="#" class="navigation__list--item navigation__list--item-truck">Truck</a></li>
     </ul>
 </nav>
