--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,36 +20,42 @@
 
 
 /******* ALL ***************/
-.header {
+.section__welcome--title,
+.section__reviews--title,
+.section__upgrades--title,
+.header__title--site-name {
   font-family: 'Catamaran', sans-serif;
   color: var(--drk-gray);
-  margin-bottom: 10px;
   font-weight: 800;
 }
 
-.list-ul {
+.header__login--link,
+.navigation__list,
+.section__welcome--list-highlights,
+.section__reviews--list-reviews,
+.section__upgrades--list-upgrades,
+.footer__copyright,
+.button {
   font-family: 'Open Sans', sans-serif;
 }
 
-.list-ul__dmc-delorean,
-.list-ul__upgrades,
-.list-ul__navigation {
+.section__welcome--title,
+.section__reviews--title,
+.section__upgrades--title,
+.header__login--link {
+  font-size: 18px;
+}
+
+.section__welcome--list-highlights,
+.section__upgrades--list-upgrades,
+.navigation__list {
   list-style-type: none;
-}
-
-.section-container {
-  padding: 10px;
-  margin-top: 10px;
-}
-
-.tools:hover {
-  color: var(--blue);
 }
 
 .button {
   height: auto;
   width: auto;
-  padding: 8px;
+  padding: 2px;
   text-align: center;
   font-family: 'Catamaran', sans-serif;
   background-color: var(--blue);
@@ -67,8 +73,7 @@
 }
 
 body {
-  margin-left: 2%;
-  margin-right: 2%;
+  margin: 8px;
 }
 
 img {
@@ -76,8 +81,14 @@ img {
   max-width: 100%;
 }
 
+.section__container {
+  display: flex;
+  flex-direction: column;
+  margin: 8px;
+}
+
 /******* Header ***************/
-#top-header {
+#header--container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -85,35 +96,37 @@ img {
   margin-top: 2%;
 }
 
-.header__siteName {
+.header__title--site-name {
   font-size: 28px;
 }
 
-.tools__my-account {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
+.header__login--link {
+  font-size: smaller;
 }
 
-.header__siteName,
-.tools {
+.header__login--link:hover {
+  color: var(--blue);
+}
+
+.header__title--site-name,
+.header__login--link {
   text-decoration: none;
   color: var(--drk-gray);
 }
-
 
 /******* Navigation ***************/
 nav {
   background-color: var(--drk-gray);
 }
 
-.list-ul__navigation {
+.navigation__list {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   padding: 15px;
 }
 
-.li-element {
+.navigation__list--item {
   color: var(--white);
   text-decoration: none;
   font-size: 16px;
@@ -121,69 +134,141 @@ nav {
 }
 
 /******* Main ***************/
-.header__welcome {
+.section__welcome--container,
+.section__reviews--container,
+.section__upgrades--container {
+  padding: 10px;
+}
+
+
+
+  /* Welcome Section */
+.section__welcome--title {
   font-size: 20px;
 }
 
-.header__dmc-delorean,
-.header__dmc-delorean-reviews,
-.header__delorean-upgrades {
-  font-size: 18px;
-}
 
-.container__img-description {
+.section__welcome--img-highlights-container {
   position: relative;
 }
 
-.container__description_box {
+.section__welcome--highlights-container {
   position: absolute;
   background-color: rgba(255, 255, 255, 0.6);
   color: var(--blue);
   width: 50%;
-  padding: 1%;
-  margin-top: 2%;
+  font-size: smaller;
+  padding: 8px;
 }
 
-.header__dmc-delorean {
-  color: var(--blue);
+.section__welcome--subtitle{
+  font-family: 'Catamaran', sans-serif;
+  font-weight: 800;
+  font-size: larger;
 }
 
-.list-ul__dmc-delorean {
+.section__welcome--list-highlights {
   font-weight: 700;
 }
 
-/*
-
-.description_box {
-  position: absolute;
-  background-color: rgba(218, 218, 218, 0.425);
-  color: rgb(0, 162, 232);
-  width: 50%;
-  padding-left: 1%;
-  margin-top: 2%;
+.section__welcome--img-container {
+  margin-left: 30px;
 }
 
-.description_box ul {
+
+
+  /* Reviews Section */
+
+.section__reviews--list-reviews {
+  margin-left: 8%;
+  font-size: smaller;
+}
+
+
+
+  /* Upgrades Section */
+
+.section__upgrades--img-link-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  text-align: center;
 }
 
-.description_box li {
-  margin: 0;
-  padding: 0;
+.section__upgrades--img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--blue);
+  border: .5px solid var(--drk-gray);
+  height: 100px;
+  width: 110%;
 }
 
-.delorean-img { 
-  margin-left: 15%;
-  width: 300px;
+.section__upgrades--list-upgrades {
+  display: grid;
+  grid-gap: 30px;
+  grid-template:
+    'flux flame'
+    'bumper hub';
 }
 
-.section {
-  padding-top: 20px;
+.section__upgrades--flux-cap {
+  grid-area: flux;
 }
 
-*/
+.section__upgrades--flame {
+  grid-area: flame;
+}
+
+.section__upgrades--bumper {
+  grid-area: bumper;
+}
+
+.section__upgrades--hub-cap {
+  grid-area: hub;
+}
+
+.section__upgrades--link,
+.footer__copyright {
+  font-size: smaller;
+}
+
+
+
 /******* Footer ***************/
-.copyright {
-  font-family: 'Open Sans', sans-serif;
+
+
+
+
+@media (min-width: 768px) {
+  .section__container {
+    display: grid;
+    grid-gap: 30px;
+    grid-template:
+      'welcome welcome'
+      'upgrades reviews';
+  }
+
+  .section__welcome--container {
+    grid-area: welcome;
+  }
+
+  .section__reviews--container {
+    grid-area: reviews;
+  }
+
+  .section__upgrades--container {
+    grid-area: upgrades;
+  }
+
+    /* Welcome Section */
+  .section__welcome--highlights-container {
+    width: 20%;
+  }
+
+    /* Upgrades Section */
+  .section__upgrades--img-container {
+    width: auto;
+  }
 }
