--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/head') %>
 
 <body>
-    <div id="wrapper">
+    <div id="body__wrapper">
         <%- include('../partials/header') %>
         <%- include('../partials/navigation') %>
 
