--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,4 +1,6 @@
 <nav>
+    <%- nav %>
+    <!--
     <ul class="navigation__list">
         <li><a href="#" class="navigation__list--item navigation__list--item-home">Home</a></li>
         <li><a href="#" class="navigation__list--item navigation__list--item-custom">Custom</a></li>
@@ -6,4 +8,5 @@
         <li><a href="#" class="navigation__list--item navigation__list--item-suv">SUV</a></li>
         <li><a href="#" class="navigation__list--item navigation__list--item-truck">Truck</a></li>
     </ul>
+    -->
 </nav>
