W03 Assignment: Reorganized css files.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
                     <li>Superman doors</li>
                     <li>Fuzzy dice!</li>
                 </ul>
-                <button class="button section__welcome--button-own-today">Own Today</button>
+                <button class="btn section__welcome--button-own-today">Own Today</button>
             </div>
 
             <div class="section__welcome--img-container">
