--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -8,7 +8,7 @@
 
 <!-- Content Heading -->
 <% if (title) { %>
-    <h1><%= title %></h1>
+    <div class="content__heading"><h1><%= title %></h1></div>
     <% } else {
       res.redirect('/')
     } %>
