--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,10 +59,12 @@
 
 .header__title--site-name {
     font-size: 28px;
+    padding: 10px;
 }
 
 .header__login--link {
     font-size: smaller;
+    padding: 10px;
 }
 
 .header__login--link:hover {
@@ -80,6 +82,7 @@
 /*--------------- NAV -----------------*/
 nav {
     background-color: var(--drk-gray);
+    width: 100%;
 }
 
 .navigation__list {
@@ -94,6 +97,7 @@ nav {
     text-decoration: none;
     font-size: 16px;
     font-weight: 800;
+    justify-content: space-evenly;
 }
 /*------------------------------------*/
 
@@ -206,31 +210,18 @@ nav {
 /*------------------------------------------------------------------------------*/
 /*                                  Inventory view(s)                           */
 /*------------------------------------------------------------------------------*/
-#inv-display__ul {
+  .vehicle-grid__ul {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); /* One column for smaller screens */
+  }
+
+.vehicle-grid__li {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    list-style-type: none;
-  }
-
-  .inv-display__image-info-container {
-    text-align: center;
-  }
-  
-.inv-display__image-container {
-    display: flex;
-    align-items: center;
-    margin: 20px;
-}
-
-.inv-display__image {
-    margin: 0 auto;
-    display: block;
 }
 
   .content__heading {
-    text-align: center;
     margin-bottom: 20px;
   }
 
@@ -246,9 +237,50 @@ nav {
 /*------------------------------------------------------------------------------*/
 
 /*---------- Min Width 768px ------------*/
-
+/*
 @media (min-width: 768px) {
+
+
     .section__container {
+    display: grid;
+    grid-gap: 30px;
+    grid-template:
+        'welcome welcome'
+        'upgrades reviews';
+    }
+  
+    .section__welcome--container {
+      grid-area: welcome;
+    }
+  
+    .section__reviews--container {
+      grid-area: reviews;
+    }
+  
+    .section__upgrades--container {
+      grid-area: upgrades;
+    }
+  
+      
+    .section__welcome--highlights-container {
+      width: 20%;
+    }
+  
+      
+    .section__upgrades--img-container {
+      width: auto;
+    }
+  }
+*/
+/*--------------------------------------*/
+
+
+@media screen and (min-width: 600px) {
+  .vehicle-grid__ul {
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); /* Responsive columns */
+  }
+
+  .section__container {
     display: grid;
     grid-gap: 30px;
     grid-template:
@@ -277,6 +309,4 @@ nav {
     .section__upgrades--img-container {
       width: auto;
     }
-  }
-
-/*--------------------------------------*/
+}
