--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,52 @@ img {
   max-width: 100%;
 }
 
-body {
-  margin: var(--body-margin-default);
+
+
+/*------------------------------------------------------------------------------*/
+/*                         Vehicle Detail Card & Vehicle Grid Card              */
+/*------------------------------------------------------------------------------*/
+#vehicle-grid__ul-style {
+  list-style-type: none;
+}
+
+.vehicle-grid__li {
+  margin: 10px;
+}
+
+.vehicle-grid-card__container {
+  border: 2px solid #272727;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  width: 200px;
+  height: 100%;
+
+  /* Flexbox */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.vehicle-grid-card__image-container{
+  width: 100%;
+  height: 100%;
+}
+
+.vehicle-grid-card__image {
+  width: 100%;
+  border-radius: 6px 6px 0px 0px;
+}
+
+.vehicle-grid-card__text {
+  padding: 10px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.vehicle-grid-card__title {
+  font-size: medium;
 }
