--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title> <%- title %> | CSE 340 App </title>
-    <link rel="stylesheet" href="/css/main.css" media="screen">
-    <link rel="stylesheet" href="/css/style.css" media="screen">
+    <link rel="stylesheet" href="/css/style.css" media="screen"> <!-- Main style sheet -->
+    <link rel="stylesheet" href="/css/main.css" media="screen"> <!-- header, nav, and footer partials -->
+    <link rel="stylesheet" href="/css/index.css" media="screen"> <!-- Index.ejs file -->
+    <link rel="stylesheet" href="/css/vehiclegrid.css" media="screen"> <!-- classification.ejs file -->
+    <link rel="stylesheet" href="/css/vehicledetail.css" media="screen"> <!-- detail.ejs file -->
+    <link rel="stylesheet" href="/css/mediaqueries.css" media="screen"> <!-- temporary file -->
 </head>
