--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,15 +8,47 @@
 /*                                Root                                          */
 /*------------------------------------------------------------------------------*/
 :root {
-  --drk-gray: #272727;
-  --white: #ffffff;
+  /*
   --blue: #33a6c8;
   --blue-hover: #2a89a5;
-  --font-family: 'Catamaran', sans-serif;
+  */
   --body-margin-default: 10px;
   --margin-sm: 10px;
   --margin-md: 10px;
   --margin-lrg: 20px;
+
+  /* Button */
+  --primary-button-default__txt-clr: #ffffff;
+  --primary-button-hover__txt-clr: #1890FF;
+
+  --primary-button-default__bg-clr: #1890FF;
+  --primary-button-hover__bg-clr:#ffffff;
+  
+  --primary-button-default__border-clr: #1890FF;
+
+  /* Fonts */
+  --font-family-catamaran: 'Catamaran', sans-serif;
+  --font-family-openSans: 'Open Sans', sans-serif;
+
+  /* Font Colors */
+  --title-clr: #272727;
+  --nav-clr: #ffffff;
+
+  /* Card Drop Shadow */
+  --card__drop-shadow-clr: rgba(0, 0, 0, 0.5);
+
+  /* Vehicle Grid Card */
+  --vehicle-grid__card-clr-outline: #272727;
+
+  /*DMC Information Card*/
+  --dmc-card__clr-bg: rgba(255, 255, 255, 0.5);
+
+  /* Upgrade Card*/
+  --upgrade-card__clr-bg: #1890FF;
+  --upgrade-card__clr-outline: #093966;
+
+  /* Highlights text */
+  --highlights-text__clr:#1890FF;
 }
 
 
@@ -38,19 +70,24 @@
   width: auto;
   padding: 2px;
   text-align: center;
-  font-family: var(--font-family);
-  background-color: var(--blue);
-  border: 2px solid var(--blue);
+  background-color: var(--primary-button-default__bg-clr);
+  border: 2px solid var(--primary-button-default__border-clr);
   border-radius: 8px;
-  color: var(--drk-gray);
+  color: var(--primary-button-default__txt-clr);
   font-weight: 700;
 }
 
 .btn:hover {
+  height: auto;
+  width: auto;
+  padding: 2px;
+  text-align: center;
+  background-color: var(--primary-button-hover__bg-clr);
+  border: 2px solid var(--primary-button-default__border-clr);
+  border-radius: 8px;
+  font-weight: 700;
   cursor: pointer;
-  color: var(--white);
-  background-color: var(--blue-hover);
-  border: 2px solid var(--blue-hover);
+  color: var(--primary-button-hover__txt-clr);
 }
 
 img {
@@ -58,52 +95,38 @@ img {
   max-width: 100%;
 }
 
-
+body {
+  color: var(--title-clr);
+}
+/*------------------------------------------------------------------------------*/
+/*                            Catamaran Font-Family Styles                      */
+/*------------------------------------------------------------------------------*/
+.header__title--site-name,
+.header__login--link,
+.footer__copyright,
+.content__heading,
+.section__welcome--title,
+.section__reviews--title,
+.section__upgrades--title,
+.vehicle-detail-card__title,
+.vehicle-detail-card__content {
+  font-family: var(--font-family-catamaran);
+}
 
 /*------------------------------------------------------------------------------*/
-/*                         Vehicle Detail Card & Vehicle Grid Card              */
+/*                            Open Sans Font-Family Styles                      */
 /*------------------------------------------------------------------------------*/
-#vehicle-grid__ul-style {
-  list-style-type: none;
+.btn,
+.section__welcome--subtitle,
+.section__welcome--list-highlights,
+.section__upgrades--list-upgrades,
+.section__reviews--list-reviews,
+.section__welcome--list-highlights {
+  font-family: var(--font-family-openSans);
 }
 
-.vehicle-grid__li {
-  margin: 10px;
-}
 
-.vehicle-grid-card__container {
-  border: 2px solid #272727;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  width: 200px;
-  height: 100%;
 
-  /* Flexbox */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.vehicle-grid-card__image-container{
-  width: 100%;
-  height: 100%;
-}
-
-.vehicle-grid-card__image {
-  width: 100%;
-  border-radius: 6px 6px 0px 0px;
-}
-
-.vehicle-grid-card__text {
-  padding: 10px;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.vehicle-grid-card__title {
-  font-size: medium;
+.content__heading {
+  margin-bottom: 20px;
 }
