--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -1,17 +1,15 @@
 <div class="sections__wrapper">
     <div class="sec sec-welcome__wrapper">
-        <h1 class="font-c index__title sec-welcome__title">Welcome to CSE Motors!</h1>
+        <h1 class="sec-welcome__title"> Welcome to CSE Motors! </h1>
         <div class="sec-welcome-dmc__wrapper">
             <div class="card sec-welcome-dmc__card">
-                <h2 class="font-op sec-welcome-dmc__title">DMC Delorean</h2>
-                <div class="font-op sec-welcome-dmc-ul__wrapper">
-                    <ul class="sec-welcome-dmc__content">
-                        <li>3 Cup holders</li>
-                        <li>Superman doors</li>
-                        <li>Fuzzy dice!</li>
-                    </ul>
-                </div>
-                <button class="btn sec-welcome-dmc__btn-default font-op">Own Today</button>
+                <h2 class="sec-welcome-dmc__title">DMC Delorean</h2>
+                <ul class="sec-welcome-dmc__content">
+                    <li>3 Cup holders</li>
+                    <li>Superman doors</li>
+                    <li>Fuzzy dice!</li>
+                </ul>
+                <button class="btn sec-welcome-dmc__btn-default">Own Today</button>
             </div>
 
             <div class="sec-welcome-dmc__img-wrapper">
@@ -21,9 +19,9 @@
     </div>
 
     <div class="sec sec-reviews__wrapper">
-        <h1 class="font-c index__title sec-reviews__title">DMC Delorean Reviews</h1>
+        <h1 class="sec-reviews__title">DMC Delorean Reviews</h1>
         <div class="sec-reviews-ul__wrapper">
-            <ul class="sec-reviews__content font-op">
+            <ul class="sec-reviews__content">
                 <li>"So fast it's almost like traveling in time." (4/5)</li>
                 <li>"Coolest ride on the road." (4/5)</li>
                 <li>"I'm feeling McFly!" (5/5)</li>
@@ -34,15 +32,15 @@
     </div>
 
     <div class="sec sec-upgrades__wrapper">
-        <h1 class="font-c index__title sec-upgrades__title">Delorean Upgrades</h1>
+        <h1 class="sec-upgrades__title">Delorean Upgrades</h1>
         <div class="sec-upgrades-ul__wrapper">
-            <ul class="sec-upgrades__content font-op">
+            <ul class="sec-upgrades__content">
                 <!-- Flux Capacitor -->
                 <li>
                     <div class="sec-upgrades__card-wrapper sec-upgrades__card-wrapper--flux">
                         <div class="sec-upgrade__card">
                             <div class="sec-upgrade-card__img-wrapper">
-                                <img src="/images/upgrades/flux-cap.png" alt="A gray square with red and blue shapes inside it." class="sec-upgrade-card__img">
+                                <img src="/images/upgrades/flux-cap.png" alt="A gray square with red and blue shapes inside it.">
                             </div>
                         </div>
                         <h2 class="sec-upgrade__subtitle">Flux Capacitor</h2>
@@ -54,7 +52,7 @@
                     <div class="sec-upgrades__card-wrapper sec-upgrades__card-wrapper--flame">
                         <div class="sec-upgrade__card">
                             <div class="sec-upgrade-card__img-wrapper">
-                                <img src="/images/upgrades/flame.jpg" alt="A large red and yellow flame with a white background." class="sec-upgrade-card__img">
+                                <img src="/images/upgrades/flame.jpg" alt="A large red and yellow flame with a white background.">
                             </div>
                         </div>
                         <h2 class="sec-upgrade__subtitle">Flame Decals</h2>
@@ -66,7 +64,7 @@
                     <div class="sec-upgrades__card-wrapper sec-upgrades__card-wrapper--bumper">
                         <div class="sec-upgrade__card">
                             <div class="sec-upgrade-card__img-wrapper">
-                                <img src="/images/upgrades/bumper_sticker.jpg" alt="A gray square bumper sticker with the words 'Hello World' written on it." class="sec-upgrade-card__img">
+                                <img src="/images/upgrades/bumper_sticker.jpg" alt="A gray square bumper sticker with the words 'Hello World' written on it.">
                             </div>
                         </div>
                         <h2 class="sec-upgrade__subtitle">Bumper Stickers</h2>
@@ -78,7 +76,7 @@
                     <div class="sec-upgrades__card-wrapper sec-upgrades__card-wrapper--hub">
                         <div class="sec-upgrade__card">
                             <div class="sec-upgrade-card__img-wrapper">
-                                <img src="/images/upgrades/hub-cap.jpg" alt="A silver hub cap with triangles and bumps in the middle with a white background." class="sec-upgrade-card__img">
+                                <img src="/images/upgrades/hub-cap.jpg" alt="A silver hub cap with triangles and bumps in the middle with a white background.">
                             </div>
                         </div>
                         <h2 class="sec-upgrade__subtitle">Hub Caps</h2>
